welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: not found: value getWolrdHeight
    mark(colors((j+offset)%getWolrdHeight()));
                           ^Array2:37: error: not found: value brusUp
  brusUp();
  ^